# spectrec

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
scripts/: input.yml  template.yml  train_net.py
spectrec/factory/: __init__.py
spectrec/factory/kernel/: Kernel.py  __init__.py  kernel_defs.py
spectrec/factory/peak/: Peak.py  __init__.py  peak_defs.py
spectrec/factory/spectral/: SpectralDataset.py  SpectralFunction.py  __init__.py
spectrec/factory/spfunction/: SpectralFunction.py  __init__.py
spectrec/losses/: __init__.py  losses.py
spectrec/network/: Network.py  UNet.py  UNet_utils.py  __init__.py
spectrec/network/unet/: UNet.py  __init__.py
spectrec/training/: __init__.py  dist.py  loggers.py  plots.py  training.py
spectrec/utils/: InputParser.py  NPKFactory.py  PKFactory.py  SpectrecInput.py  __init__.py  plots.py  train.py
test/factory/: test_Peak.py  test_SpectralDataset.py  test_SpectralFunction.py
test/losses/: test_RMSELoss.py
test/network/unet/: test_UNet.py
tests/factory/: test_Kernel.py  test_SpectralDataset.py
tests/losses/: test_MSELoss.py  test_RMSELoss.py
tests/network/: test_Network.py  test_UNet.py
tests/network/unet/: test_UNet.py
tests/utils/: test_NPKFactory.py  test_PKFactory.py
