[tool.poetry]
name = "spectrec"
version = "0.1.0"
description = "Lattice QCD spectral function reconstruction tools using neural networks"
authors = ["Sergio Chaves Garcia-Mascaraque <sergiozteskate@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.21.2"
torch = "^1.9.0"
matplotlib = "^3.4.3"
PyYAML = "^5.4.1"
tensorboard = "^2.6.0"
submitit = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flakehell]
extended_default_ignore = []
max_line_length = 100
format = "colored"
show_source = true

[tool.flakehell.plugins]
pylint = ["+*"]
